[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Spawners/Phase10_Spawner3.gd" type="Script" id=1]

[node name="Phase10_Spawner3" type="Spatial"]
script = ExtResource( 1 )

[node name="Degrees0" type="Position3D" parent="."]

[node name="Degrees90" type="Position3D" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="Degrees180" type="Position3D" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="Degrees270" type="Position3D" parent="."]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0 )
